corrected text alignment

--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -2,7 +2,7 @@ html{
   scroll-behavior: smooth;
 }
 p{
-  text-align: justify;
+  text-align: left;
 }
 h4{
   margin-top: 0;
@@ -32,6 +32,7 @@ body > div.sidenav-overlay{
 }
 .about p{
   text-indent: 2em;
+  text-align: justify;
 }
 .container-fluid{
   margin: 0 50px;
